<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ABMHistoria" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_historia"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/Titulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_label"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <MultiAutoCompleteTextView
                        android:id="@+id/text_tituloHistoria"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:ems="10"
                        android:text="@string/noText" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:text="@string/descripcion_label"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <MultiAutoCompleteTextView
                        android:id="@+id/text_descripcion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:layout_weight="2.60"
                        android:ems="10"
                        android:inputType="textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine"
                        android:lines="4"
                        android:text="@string/noText" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent" >

                            <TextView
                                android:id="@+id/label_prioridad"
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:text="@string/prioridad_label"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                            <Spinner
                                android:id="@+id/spinner_prioridad"
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:entries="@array/stringArray_prioridad" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" >

                            <TextView
                                android:id="@+id/label_riesgo"
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:text="@string/riesgo_label"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                            <Spinner
                                android:id="@+id/spinner_riesgo"
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:entries="@array/stringArray_riesgo" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/bt_aceptar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="aceptarOnclick"
                        android:text="@string/str_aceptar" />

                    <Button
                        android:id="@+id/bt_cancelar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:onClick="cancelarOnclick"
                        android:text="@string/str_canelar" />
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>